--- a/Movie DB/Base.lproj/Main.storyboard
+++ b/Movie DB/Base.lproj/Main.storyboard
@@ -28,17 +28,109 @@
         <scene sceneID="bQQ-Wf-7ZG">
             <objects>
                 <viewController id="BnJ-wP-0Aq" customClass="SeriesViewTab" customModule="Movie_DB" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gJw-Mp-0jO"/>
+                        <viewControllerLayoutGuide type="bottom" id="9PM-sQ-YwP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FEw-2b-MkW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hhw-4p-d5s">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textShadowColor" white="1" alpha="0.71753589527027029" colorSpace="calibratedWhite"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Title" id="J4d-XS-9iM"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="179" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xak-3H-T4l">
+                                <rect key="frame" x="0.0" y="72" width="600" height="479"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="seriesIdent" rowHeight="179" id="2ZW-PY-I9X" customClass="SeriesTableViewCell" customModule="Movie_DB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="179"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2ZW-PY-I9X" id="ZlQ-aM-iQ4">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="178"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r22-2C-bhu">
+                                                    <rect key="frame" x="327" y="69" width="51" height="31"/>
+                                                </switch>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvE-J5-EvJ">
+                                                    <rect key="frame" x="0.0" y="16" width="600" height="186"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.92202919407894723" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="hvE-J5-EvJ" firstAttribute="top" secondItem="ZlQ-aM-iQ4" secondAttribute="top" constant="-8" id="5Q7-k0-hps"/>
+                                                <constraint firstAttribute="bottom" secondItem="hvE-J5-EvJ" secondAttribute="bottom" id="O20-Sr-D6X"/>
+                                                <constraint firstAttribute="trailing" secondItem="r22-2C-bhu" secondAttribute="trailing" constant="224" id="QQa-6R-icR"/>
+                                                <constraint firstItem="r22-2C-bhu" firstAttribute="centerY" secondItem="hvE-J5-EvJ" secondAttribute="centerY" id="iYR-7X-QTh"/>
+                                                <constraint firstItem="hvE-J5-EvJ" firstAttribute="leading" secondItem="ZlQ-aM-iQ4" secondAttribute="leading" id="jho-Yi-69c"/>
+                                                <constraint firstAttribute="trailing" secondItem="hvE-J5-EvJ" secondAttribute="trailing" id="m2B-P1-581"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="seriesName" destination="hvE-J5-EvJ" id="5tM-FT-yav"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BnJ-wP-0Aq" id="Zar-GT-clG"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hhw-4p-d5s" firstAttribute="leading" secondItem="FEw-2b-MkW" secondAttribute="leadingMargin" constant="-20" id="0JN-ZO-h8M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Hhw-4p-d5s" secondAttribute="trailing" constant="-20" id="BcR-m9-eoa"/>
+                            <constraint firstAttribute="trailing" secondItem="xak-3H-T4l" secondAttribute="trailing" id="D07-z7-GM6"/>
+                            <constraint firstItem="xak-3H-T4l" firstAttribute="top" secondItem="Hhw-4p-d5s" secondAttribute="bottom" id="G92-zo-fjB"/>
+                            <constraint firstItem="xak-3H-T4l" firstAttribute="leading" secondItem="FEw-2b-MkW" secondAttribute="leading" id="IlN-jZ-qOn"/>
+                            <constraint firstItem="Hhw-4p-d5s" firstAttribute="top" secondItem="gJw-Mp-0jO" secondAttribute="bottom" constant="8" id="rco-Je-9Mj"/>
+                            <constraint firstItem="9PM-sQ-YwP" firstAttribute="top" secondItem="xak-3H-T4l" secondAttribute="bottom" id="z9o-gR-7gZ"/>
+                        </constraints>
+                    </view>
                     <tabBarItem key="tabBarItem" title="Series" image="series_set" id="FjL-Ea-kLL"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="seriesTabelView" destination="xak-3H-T4l" id="6b0-iY-Rc0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdO-KM-1Hr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1814" y="721"/>
+            <point key="canvasLocation" x="1792" y="704"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="v5m-hR-CYK">
+            <objects>
+                <viewController id="lqJ-ME-URs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="n22-hP-NTJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="KB2-KR-QXP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wRJ-fD-g9b">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="230-jl-IZ5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3cE-2p-kd3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1116" y="1092"/>
         </scene>
         <!--Movie-->
         <scene sceneID="VWq-sF-hL0">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qMz-0t-m6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="hav-Az-iJ6" customClass="MovieViewController" customModule="Movie_DB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController extendedLayoutIncludesOpaqueBars="YES" id="hav-Az-iJ6" customClass="MovieViewController" customModule="Movie_DB" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="139" sectionHeaderHeight="28" sectionFooterHeight="28" id="P3G-uh-ZnB">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -47,7 +139,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
-                                <navigationItem title="Movies" id="zbS-6g-9Xv"/>
+                                <navigationItem title="Movie" id="zbS-6g-9Xv"/>
                             </items>
                         </navigationBar>
                         <prototypes>
@@ -105,8 +197,8 @@
                                                 <userDefinedRuntimeAttribute type="size" keyPath="minImageSize">
                                                     <size key="value" width="8" height="8"/>
                                                 </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="817A4A02-B850-46B7-B04C-FFFDCDC8E8CB"/>
-                                                <userDefinedRuntimeAttribute type="image" keyPath="fullImage" value="2A19A232-29A2-45AF-919E-345AB4BF2D3E"/>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="B9131936-B583-4301-9FCD-D5076C08D388"/>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="fullImage" value="24B67E81-0F8B-47BC-AFA5-D81BF8065269"/>
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                     </subviews>
@@ -161,11 +253,13 @@
                             <outlet property="dataSource" destination="hav-Az-iJ6" id="a7D-rB-gLE"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <tabBarItem key="tabBarItem" title="Movie" image="movie_set" selectedImage="movie_set" id="IHu-l2-ekI"/>
                     <connections>
                         <outlet property="movieTableView" destination="P3G-uh-ZnB" id="Spj-fD-efj"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qMz-0t-m6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1761" y="67"/>
         </scene>
@@ -182,6 +276,7 @@
                     <connections>
                         <segue destination="hav-Az-iJ6" kind="relationship" relationship="viewControllers" id="xQG-Ke-4zQ"/>
                         <segue destination="BnJ-wP-0Aq" kind="relationship" relationship="viewControllers" id="o7N-ws-lQf"/>
+                        <segue destination="lqJ-ME-URs" kind="relationship" relationship="viewControllers" id="7Gq-cs-PCI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XTl-s9-mhH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -190,7 +285,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="2A19A232-29A2-45AF-919E-345AB4BF2D3E" width="22" height="22">
+        <image name="24B67E81-0F8B-47BC-AFA5-D81BF8065269" width="22" height="22">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -273,7 +368,7 @@ AKsArQCyALUAtwC5ALsAvQDCANkA2wDdEQ8RFBEfESgROxE/EUoRUxFYEWARYxFoEXcRexGCEYoRlxGc
 EZ4RoBGlEa0RsBG1Eb0RwBHSEdUR2gAAAAAAAAIBAAAAAAAAAEEAAAAAAAAAAAAAAAAAABHcA
 </mutableData>
         </image>
-        <image name="817A4A02-B850-46B7-B04C-FFFDCDC8E8CB" width="22" height="22">
+        <image name="B9131936-B583-4301-9FCD-D5076C08D388" width="22" height="22">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
